--- a/.env
+++ b/.env
@@ -15,10 +15,10 @@ AUTO_RECORDING=false
 AUTO_TYPING=false
 AUTO_RECORD_TYPE=false
 AUTO_READ=false
-AUTO_BIO=true
+AUTO_BIO=false
 ANTI_92=false
 AUTO_SW_VIEW=true
-WELCOME=true
+WELCOME=false
 AUTO_REACT=false
 AUTO_LIKE_STATUS=true
 
